--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -2,26 +2,14 @@
       <div class="carousel-holder">
         <div  id="carousel-example-generic" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators" >
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="i"></li>
+            <li *ngFor="let category of categories;let i = index" data-target="#carousel-example-generic" data-slide-to="i" [ngClass]="i === 0? 'active' : ''"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
-            <div class="item active">
-              <img class="slide-image" src="http://180.149.245.182:3008/storage/image/vitra_slow_chair_family_1_000.png" alt="">
+           
+            <div *ngFor="let category of categories;let i = index" [ngClass]="i === 0? 'item active' : 'item'">
+              <img  src="{{category.images.ImgURL}}" class="slide-image" alt=""/>
               <div class="carousel-caption">
-                <h4>Lorem Ipsum</h4>
-              </div>
-            </div>
-            <div class="item">
-              <img class="slide-image" src="https://az760333.vo.msecnd.net/-/media/property/lansdowne-resort/resort/lansdowne_interior_hospitality_suite_parlor3-crpd1150x500.jpg?ts=a699b0e0-40d0-48b7-84cf-b3e8e8aaa270" alt="">
-              <div class="carousel-caption">
-                <h4>Lorem Ipsum</h4>
-              </div>
-            </div>
-            <div class="item">
-              <img class="slide-image" src="http://180.149.245.182:3008/storage/image/tables.jpg" alt="">
-              <div class="carousel-caption">
-                <h4>Lorem Ipsum</h4>
+                <h4>{{category.category_name}}</h4>
               </div>
             </div>
           </div>
@@ -33,5 +21,4 @@
           </a>
         </div>
       </div>
-      <!--<div class="new">-->
     </div>
