--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@import "~angular-star-rating/assets/scss/star-rating";
 /* You can add global styles to this file, and also import other style files */
 @media (min-width: 970px) {
     .container {
