--- a/src/app/product/product-details.component.html
+++ b/src/app/product/product-details.component.html
@@ -7,7 +7,7 @@
             <div class="preview">
               <div class="preview-pic tab-content">
               	<div class="my-img active">
-            		<img [src]="imgsrc" class="actual-img">
+            		<img  [src]="imgsrc" class="actual-img" [imageZoom]="zoomedImageSrc" lensStyle="LENS" >
             	</div>
               </div>
               <ul class="preview-thumbnail nav nav-tabs">
@@ -50,24 +50,7 @@
 
               <div class="action">
                 <button class="btn btn-primary" type="button">ADD TO CART</button>
-                <button type="button" class="btn btn-warning" data-toggle="modal" data-target=".bs-example-modal-sm">RATE PRODUCT</button>
-                <div class="modal fade bs-example-modal-sm"  role="dialog">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Rate Product</h4>
-                      </div>
-                      <div class="modal-body">
-                        <star-rating-comp [starType]="'svg'"></star-rating-comp>
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">RATE IT</button>
-                      </div>
-                    </div>                   
-                  </div>
-                </div>
+               <app-rate-modal [product]="product"></app-rate-modal>
               </div>
             </div>
           </div>
