loged in user can give rating to product

--- a/src/app/rate-modal/rate-modal.component.html
+++ b/src/app/rate-modal/rate-modal.component.html
@@ -1,4 +1,4 @@
-	<button type="button" class="btn btn-warning" data-toggle="modal" data-target=".bs-example-modal-sm">RATE PRODUCT</button>
+	<button type="button" class="btn btn-warning" data-toggle="modal" data-target=".bs-example-modal-sm" (click)="isAuthenticate()">RATE PRODUCT</button>
 
     <div class="modal fade bs-example-modal-sm"  role="dialog" id="myModal">
       <div class="modal-dialog">
