--- a/src/app/user/user-profile.component.html
+++ b/src/app/user/user-profile.component.html
@@ -43,7 +43,7 @@
               </tr>
               <tr>
                 <th>Date of Birth</th>
-                <td>{{user.dateOfBirth | date }}</td>
+                <td>{{user.birth_date | date }}</td>
               </tr>
               <tr>
                 <th>Mobile Number</th>
