--- a/src/app/user/user-profile.component.html
+++ b/src/app/user/user-profile.component.html
@@ -4,21 +4,7 @@
       <h4> My Account </h4>
       <hr>
     </div>
-
-    <div class="col-md-3">
-      <img src="http://soeasyloansonline.com.au/img/testimonial/noimg.png" class="img-responsive img-circle profile" alt="profile_pic" style="height: 200px; width: 200px !important;">
-  
-      <div class="text-center">
-        <br>
-        <div class="text-danger"><strong>{{name}}</strong></div>
-      </div>
-      <br>
-      <ul class="nav">
-        <li><a href="./orders.html" ><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Orders</a></li>
-        <li><a routerLink="/user/profile" routerLinkActive="active" ><i class="fa fa-user fa-fw" aria-hidden="true"></i>&nbsp; Profile</a></li>
-        <li><a href="./address.html" ><i class="fa fa-address-book fa-fw" aria-hidden="true"></i>&nbsp; Address</a></li>
-      </ul>
-    </div>
+    <account-sidebar [image]="user.images" [name]="name"></account-sidebar>
 
     <div class="col-md-9">
       <div class="panel panel-default">
@@ -43,7 +29,7 @@
               </tr>
               <tr>
                 <th>Date of Birth</th>
-                <td>{{user.birth_date | date }}</td>
+                <td>{{user.birth_date  }}</td>
               </tr>
               <tr>
                 <th>Mobile Number</th>
